# BSDC.py

./: .gitignore  README.md  pyproject.toml  requirements.txt
BSDC/: client.py
BSDC/exceptions/: __init__.py
disnake_sdc/: __init__.py
disnake_sdc_api/: client.py
disnake_sdc_api/exceptions/: __init__.py
example/: cog.py
