[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BSDC"
version = "2.0.0"
authors = [
  { name="Krista", email="contactchisato@gmail.com" },
]
description = ""
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.11"
classifiers = [
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krispeckt/BSDC.py"

[tool.poetry.dependencies]
pip = "24.0"
python = "^3.11"
aiohttp = "3.9.4"
disnake = "2.9.2"
loguru = "^0.7.2"
asyncio = "^3.4.3"

[tool.setuptools]
packages = ["BSDC", "BSDC.exceptions"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
lavamystic = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPrivateUsage = false